aladdin api
